--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -13,10 +13,6 @@ In Atlantis, our web components use elevation to specify position on the z-axis,
 with shadows separately responsible for conveying that depth. Our mobile
 components combine these two concepts in keeping with Android and iOS patterns.
 
-> Our web implementation was built first and didn't consider these shared
-> concerns at the time but we may reconcile web and mobile concepts in the
-> future.
-
 Generally speaking, the "higher" an element sits in the z-axis, the broader its'
 shadow should spread, to reflect diffusion in the distance between the element
 and the ground. As an element gets nearer to the ground, or "lower", the
@@ -26,9 +22,34 @@ We also include a _slight_ y-axis offset of elevation shadows to imply that the
 light source is coming from an angle slightly over the head of a user looking
 directly into the screen.
 
-## Web
+### Low
 
-The following table lists all elements that has a z-index specified on it.
+<Example of="low" />
+
+A low element may have a slight elevation, but is not necessarily something that
+will glide across the surface. A basic card on mobile that is not tappable would
+be represented as having a "low" elevation.
+
+### Base
+
+<Example of="base" />
+
+This shadow should be used for most instances of shadows to convey that an
+element is floating overtop related elements, such as in
+[Menu](/components/menu) or [Popover](/components/popover). An element with a
+base elevation is likely interactive, and this level can indicate and invite the
+use of gesture controls in a mobile app.
+
+### High
+
+<Example of="high" />
+
+High elements should be elements that float overtop the entire interface,
+typically with a fixed position. The "high" elevation indicates that the element
+has broken the plane of the view. A good example for web would be
+[Toast](/components/toast).
+
+## Web
 
 export function Value({ of: type }) {
   const styles = getComputedStyle(document.documentElement);
@@ -36,35 +57,51 @@ export function Value({ of: type }) {
   return <React.Fragment>{getValue}</React.Fragment>;
 }
 
+### Z-index elevation
+
+The following table lists Atlantis components that have a z-index specified.
+
+These values can be referenced when you are building a view so that you can
+ensure the elements you are using do not unintentionally overlap, if you end up
+using z-index on non-Atlantis components.
+
 | Component        | Value                  |
 | :--------------- | :--------------------- |
 | Form field label | <Value of="base" />    |
 | Menu             | <Value of="menu" />    |
 | Modal            | <Value of="modal" />   |
 | Tooltip          | <Value of="tooltip" /> |
+| Toast            | <Value of="toast" />   |
+
+export function Example({ of: shadow }) {
+  const style = {
+    width: "100%",
+    height: "var(--space-largest)",
+    backgroundColor: "var(--color-white)",
+    boxShadow: `var(--shadow-${shadow})`,
+  };
+  return <div style={style} />;
+}
+
+export function Elevation({ of: shadow }) {
+  const element = document.createElement("div");
+  element.style.boxShadow = `var(--shadow-${shadow})`;
+  document.body.appendChild(element);
+}
+
+### Shadow elevation
+
+These are the box-shadows rendered to signify elevation on given UI elements;
+they map to our low/base/high pattern.
+
+| Name            | Visual                |
+| :-------------- | :-------------------- |
+| `--shadow-low`  | <Example of="low" />  |
+| `--shadow-base` | <Example of="base" /> |
+| `--shadow-high` | <Example of="high" /> |
 
 ## Mobile
 
 For mobile designs, the concept of elevation applies to both shadows and
-hierarchy of the element along the z-index. Currently we have 3 defined levels
-of elevation:
-
-### Low
-
-A low element may have a slight elevation, but is not necessarily something that
-will glide across the surface. A card that holds interactive controls within
-itself, but that does not have any interactions itself, may be useful to
-indicate as "low".
-
-### Base
-
-This shadow should be used for most instances of shadows, as it conveys an
-elevation that is noticeable but not aggressively close to the user. An element
-with a base elevation is likely interactive, and this level can indicate and
-invite the use of gesture controls.
-
-### High
-
-High elements should be elements that float overtop the entire interface, likely
-with a fixed position. The "high" elevation indicates that the element has
-broken the plane of the view.
+hierarchy of the element along the z-index. Android accepts a single "elevation"
+value, while iOS accepts more granular shadow values similar to CSS.
