Add directions icon

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -160,6 +160,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="address" />    | `address`    |
 | <Icon name="moveMarker" /> | `moveMarker` |
 | <Icon name="property" />   | `property`   |
+| <Icon name="directions" /> | `directions` |
 
 ### Messaging
 
