--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -25,6 +25,7 @@ import { Page } from "@jobber/components/Page";
 
 <Playground>
   <Page
+    breadcrumb="Settings"
     title="Notifications"
     intro="Improve job completion rates, stop chasing payments, and boost your customer service by automatically communicating with your clients at key points before, during, and after a job. Read more about Notifications by visiting our [Help Center](https://help.getjobber.com/hc/en-us/articles/115009737128)."
   >
@@ -38,6 +39,12 @@ Using Page is pretty straightforward - after any navigational elements, Page
 should contain the content the user will be engaging with. If there is any sort
 of footer, it should exist after Page.
 
+The breadcrumb jumps up one level in the application's directory hierarchy, so
+the label should reflect the destination.
+
+- **Do:** use the breadcrumb's destination page title as the breadcrumb label
+- **Don't:** use "Back" or "Back to {destination}" as the breadcrumb label.
+
 ## Props
 
 <Props of={Page} />
@@ -48,6 +55,7 @@ of footer, it should exist after Page.
 
 <Playground>
   <Page
+    breadcrumb="Settings"
     title="Notification Settings"
     intro="This isn't just talk. Get into action with some buttons and menus."
     primaryAction={{ label: "Send Food Alert", onClick: () => alert("🥨") }}
@@ -99,6 +107,7 @@ Use a subtitle when you need to supplement a page title.
 
 <Playground>
   <Page
+    breadcrumb="Settings"
     title="Notifications"
     subtitle="Notify me of all the work"
     intro="Improve job completion rates, stop chasing payments, and boost your customer service by automatically communicating with your clients at key points before, during, and after a job. Read more about Notifications by visiting our [Help Center](https://help.getjobber.com/hc/en-us/articles/115009737128)."
