Added affix on top of error fix

--- a/packages/components/src/FormField/FormField.mdx
+++ b/packages/components/src/FormField/FormField.mdx
@@ -36,6 +36,20 @@ import { FormField } from "@jobber/components/FormField";
   <FormField type="text" name="age" placeholder="Your age in words" />
 </Playground>
 
+## Text input with prefix postfix
+
+<Playground>
+  <FormField
+    prefixText="$"
+    postfixText=".00"
+    prefixIcon="gift"
+    postfixIcon="truck"
+    type="text"
+    name="age"
+    placeholder="Cost in CAD"
+  />
+</Playground>
+
 ## Textarea
 
 <Playground>
