--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -32,32 +32,34 @@ meaning and recommended usage.
 
 #### Base
 
-Use the `base` size for most icon usage. 
+Use the `base` size for most icon usage.
 
 #### Small
 
-Only use `small` when space is severely constrained, such as in a [small Button.](/components/button/#small)
+Only use `small` when space is severely constrained, such as in a
+[small Button.](/components/button/#small)
 
 #### Large
 
-Only use `large` icons when the icon is a prominent feature of the interface, 
+Only use `large` icons when the icon is a prominent feature of the interface,
 such as in a full-screen error view on a mobile device.
 
 ### Icon construction guidelines
 
-When contributing a new icon, design to these guidelines for the `base` size. The `small` 
-and `large` sizes will be generated programatically once the `base` size icon has been
-created.
+When contributing a new icon, design to these guidelines for the `base` size.
+The `small` and `large` sizes will be generated programatically once the `base`
+size icon has been created.
 
 #### Size, weight, and spacing
 
-Icons are only responsible for their own spacing. Spacing when used within other components, 
-such as [List](/components/list), is the responsibility of those other components.
+Icons are only responsible for their own spacing. Spacing when used within other
+components, such as [List](/components/list), is the responsibility of those
+other components.
 
 - Icons should have a height and width of 20px container within a 24px artboard,
   effectively providing a 2px padding on all sides
-- Icons can be optically adjusted within this 20px space to attain good visual balance with
-  the rest of the Atlantis icon set
+- Icons can be optically adjusted within this 20px space to attain good visual
+  balance with the rest of the Atlantis icon set
 - Circular icons should have a 20px diameter
 - Lines should have a 2px weight
 
@@ -75,8 +77,10 @@ such as [List](/components/list), is the responsibility of those other component
 
 #### Color
 
-Design your icons with `#000000`. If an icon is associated with a systemic color such as ["destructive"](/colors#destructive) 
-specify the system color for the icon when it is added to Atlantis. In all other cases, use the default icon color.
+Design your icons with `#000000`. If an icon is associated with a systemic color
+such as ["destructive"](/colors#destructive) specify the system color for the
+icon when it is added to Atlantis. In all other cases, use the default icon
+color.
 
 ```ts
 import { Icon } from "@jobber/components/Icon";
@@ -173,6 +177,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sms" />         | `sms`         |
 | <Icon name="sms2" />        | `sms2`        |
 | <Icon name="sendMessage" /> | `sendMessage` |
+| <Icon name="compose" />     | `compose`     |
 
 ### User
 
