--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -71,26 +71,51 @@ import React, { ReactText, useState } from "react";
 
 ---
 
-### Using XOR for conditional properties
+### Use XOR over Unions for conditional properties
 
-We prefer `XOR` rather than `union` types. With a `union` we are saying it can be `typeA`, `typeB`, or a combination of both. With `XOR` we are saying it will be _either_ `typeA` _or_ `typeB` but _never_ a combination of both.
+When creating props that will change from required to optional, we prefer to use
+[XOR](https://www.npmjs.com/package/ts-xor) over
+[Unions](https://www.typescriptlang.org/docs/handbook/unions-and-intersections.html).
+This allows us to be more secure with our `interface` by saying a type will
+either be `TypeA` or `TypeB` but never a combination of both.
 
-An example of this:
+```tsx
+import { XOR } from "ts-xor";
 
+interface BaseComponentProps {
+  readonly label?: string;
+  readonly icon?: IconNames;
+}
+
+interface ComponentWithActionProps extends BaseComponentProps {
+  readonly icon: IconNames;
+  onClick?(): void;
+}
+
+type ComponentProps = XOR<BaseComponentProps, ComponentWithActionProps>;
 ```
-  interface BaseComponentNameProps {
-    ...;
-    determinate?: boolean;
-  }
 
-  interface DeterminateComponentNameProps extends BaseComponentNameProps {
-    determinate: boolean;
-    currentValue: number;
-    maxValue?: number;
-  }
+In the example above, our `BaseComponentProps` tells us that the `label` and the
+`icon` are both optional properties. In `ComponentWithActionProps` we tell
+typscript that we are extending the `BaseComponentProps`, but the `icon` is now
+a required property, and we have added an additional `onClick` property. The
+result will look something like:
 
-  type ComponentProps = XOR<BaseComponentNameProps, DeterminateComponentNameProps>;
+```tsx
+✅
+<Component label="Atlantis" icon="gift" />
+✅
+<Component label="Atlantis" icon="gift" onClick={() => alert('Hello 👋')} />
+✅
+<Component icon="gift" onClick={() => alert('Hello 👋')} />
+❌
+<Component label="Atlantis" onClick={() => alert('Hello 👋')} />
 ```
+
+The last example will cause a typescript error because we have now said that if
+an `onClick` is used, then the component must be using the
+`ComponentWithActionProps`. Since that is the case, the `icon` property is now
+required.
 
 ---
 
