--- a/docs/guides/frontent-style.mdx
+++ b/docs/guides/frontent-style.mdx
@@ -27,7 +27,7 @@ names across the system. For example...
 
 We use `base` as our default whenever possible when a property has a set range of outcomes. This can be seen in.. 
 
-  - the `size` properties of [Button](/components/Button), [Avatar](/components/avatar), [InputText](/components/input-text), [Text](/packages-components-src-text-text), ]ProgressBar](/components/progress-bar), [Spinner](/components/spinner), etc;
+  - the `size` properties of [Button](/components/Button), [Avatar](/components/avatar), [InputText](/components/input-text), [Text](/packages-components-src-text-text), [ProgressBar](/components/progress-bar), [Spinner](/components/spinner), etc;
   - `maxLines` of [Text](/packages-components-src-text-text)
   - values of [Shadow](/elevation), [Spacing](/space), [Border Radius](/border-radius) design tokens
 
