--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -24,46 +24,256 @@ import { InputText } from "@jobber/components/InputText";
 ```
 
 <Playground>
-  <InputText placeholder="Ship Name" defaultValue="Rocinante" />
+  <InputText defaultValue="Rocinante" placeholder="Ship Name" />
+</Playground>
 
+## Props
+
+<Props of={InputText} />
+
+## Controlled
+
+Use this to allow users to provide short answers.
+
+<Playground>
+  {() => {
+    const [age, setAge] = useState("Veintisiete");
+    return (
+      <InputText
+        value={age}
+        onChange={setAge}
+        name="age"
+        placeholder="Age in words"
+      />
+    );
+  }}
+</Playground>
+
+## Multiline
+
+Use this to allow users to provide long answers. The default number of rows is
+three.
+
+<Playground>
   <InputText
-    placeholder="Ship Name"
-    defaultValue="A really really really long value so that we can see if the padding for the suffix is correct. We can only tell with a really long value"
-    suffix={{ label: "Goodbye" }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="A really really really long value so that we can see if the padding for the suffix is correct. We can only tell with a really long value"
-    suffix={{ icon: "job", label: "Goodbye" }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="A really really really long value so that we can see if the padding for the suffix is correct. We can only tell with a really long value"
-    suffix={{ icon: "job", label: "Goodbye", onClick: () => alert("Hello") }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="A really really really long value so that we can see if the padding for the suffix is correct. We can only tell with a really long value"
-    suffix={{ icon: "job", onClick: () => alert("Hello") }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="A really really really long value so that we can see if the padding for the suffix is correct. We can only tell with a really long value"
-    suffix={{ icon: "gift" }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="Rocinante"
-    prefix={{ icon: "home" }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="Rocinante"
-    prefix={{ label: "Hello with a longer prefix", icon: "gift" }}
-  />
-  <InputText
-    placeholder="Ship Name"
-    defaultValue="Rocinante"
-    prefix={{ label: "Hello with a longer prefix" }}
+    multiline={true}
+    placeholder="Describe your age"
+    name="describeAge"
   />
 </Playground>
+
+## Multiline with Minimum and Maximum
+
+This is to allow flexibility in the displayed textarea size as the user types.
+The textarea will start at a specified minimum and grow to a specified maximum.
+
+<Playground>
+  <InputText
+    defaultValue="Rocinante"
+    multiline={true}
+    rows={{ min: 1, max: 4 }}
+  />
+</Playground>
+
+## Prefix/Suffix
+
+<Playground>
+  <InputText
+    defaultValue="Rocinante"
+    placeholder="Ship name"
+    prefix={{ label: "🚢", icon: "star" }}
+    suffix={{
+      label: "Uh Oh!",
+      icon: "alert",
+      onClick: () => alert("You sunk my battleship!"),
+    }}
+  />
+</Playground>
+
+## Validation message
+
+You can add your own custom validation messages on a field. However, this
+shouldn't replace server-side validation.
+
+🔱 Atlantis utilizes [React Hook Forms](https://react-hook-form.com/) to handle
+`input` and `form` validation. This means that the
+[React Hook Forms validation options](https://react-hook-form.com/api#register)
+are available out of the box.
+
+This includes, but is not limited to:
+
+- `required` - A Boolean which, if true, indicates that the input must have a
+  value.
+- `maxLength` - The maximum length of the value to accept for this input.
+- `minLength` - The minimum length of the value to accept for this input.
+- `pattern` - The regex pattern for the input.
+- `validate` - You can pass a callback function as the argument to validate, or
+  you can pass an object of callback functions to validate all of them.
+
+<Playground>
+  {() => {
+    return (
+      <InputText
+        name="age"
+        placeholder="What's your age"
+        validations={{
+          required: {
+            value: true,
+            message: "You have to tell us your age",
+          },
+          validate: validations,
+        }}
+      />
+    );
+    function validations(val) {
+      if (val.length > 0 && !isNaN(val)) {
+        return "Type your age in words please.";
+      }
+      if (val.length >= 10) {
+        return "That seems too old.";
+      }
+      return true;
+    }
+  }}
+</Playground>
+
+## States
+
+### Disabled
+
+<Playground>
+  <InputText
+    placeholder="Credit card"
+    value="**** **** **** 1234"
+    disabled={true}
+    name="creditCard"
+  />
+</Playground>
+
+### Read only
+
+<Playground>
+  <InputText
+    placeholder="Your referral code"
+    value="WXYZ100"
+    readonly={true}
+    name="referralCode"
+  />
+</Playground>
+
+### Invalid
+
+<Playground>
+  <InputText
+    placeholder="Email"
+    value="atlantis"
+    invalid={true}
+    name="emailAddress"
+  />
+</Playground>
+
+## Sizes
+
+### Small
+
+<Playground>
+  <InputText name="smallField" size="small" placeholder="Duration" />
+</Playground>
+
+### Large
+
+<Playground>
+  <InputText name="largeField" size="large" placeholder="Your username" />
+</Playground>
+
+## Inline
+
+<Playground>
+  <Text>
+    My name is
+    <InputText
+      name="durationInDays"
+      value="Jeff"
+      size="small"
+      inline={true}
+      maxLength={4}
+      align="center"
+    />
+  </Text>
+</Playground>
+
+## Insertion
+
+<Playground>
+  {() => {
+    const [text, setText] = useState("Just some words here.");
+    const textRef = React.createRef();
+    const handleTextChange = newValue => {
+      setText(newValue);
+    };
+    const insert = () => {
+      textRef.current.insert("🎉");
+    };
+    return (
+      <Content>
+        <InputText value={text} onChange={handleTextChange} ref={textRef} />
+        <pre>{text}</pre>
+        <Button label="Insert Emoji" onClick={insert} />
+      </Content>
+    );
+  }}
+</Playground>
+
+## Focus
+
+<Playground>
+  {() => {
+    const textARef = React.createRef();
+    const textBRef = React.createRef();
+    const focusA = () => {
+      textARef.current.focus();
+    };
+    const focusB = () => {
+      textBRef.current.focus();
+    };
+    return (
+      <Content>
+        <InputText value="Text input A" ref={textARef} />
+        <InputText value="Text input B" ref={textBRef} />
+        <Button label="Focus text input A" onClick={focusA} />
+        <br />
+        <Button label="Focus text input B" onClick={focusB} />
+      </Content>
+    );
+  }}
+</Playground>
+
+## Keyboard
+
+Determine what default keyboard appears on mobile web.
+
+<Playground>
+  <InputText
+    placeholder="Describe your age"
+    name="describeAge"
+    keyboard="numeric"
+  />
+</Playground>
+
+## Loading
+
+Add a loading state to content.
+
+<Playground>
+  <InputText
+    placeholder="Checking phone number"
+    name="phoneNumber"
+    loading={true}
+    keyboard="numeric"
+  />
+</Playground>
+
+## Using onValidation
+
+If you need to capture the error message and render it outside of the component.
+Read the [InputValidation](/components/input-validation) documentation.
