refactored tests for input password, added visibility toggle for passwords

--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -50,6 +50,16 @@ character-masking, consider using
   }}
 </Playground>
 
+## With visibility toggle
+
+<Playground>
+  <InputPassword
+    defaultValue="password"
+    placeholder="Password"
+    hasVisibilityToggle
+  />
+</Playground>
+
 ## With Error
 
 For more information about available `validations`, see the
