--- a/packages/hooks/src/usePasswordStrength/usePasswordStrength.mdx
+++ b/packages/hooks/src/usePasswordStrength/usePasswordStrength.mdx
@@ -13,7 +13,7 @@ import { InputText } from "@jobber/components/InputText";
 # UsePasswordStrength
 
 `usePasswordStrength` is a hook used to calculate the strength of a password
-using the <a href="https://github.com/dropbox/zxcvbn">zxcvbn</a> package.
+using the [zxcvbn](https://github.com/dropbox/zxcvbn) package.
 
 ```tsx
 import { usePasswordStrength } from "@jobber/hooks";
