introduce subtle color, replace cancel color, add type to button

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -99,7 +99,7 @@ or workflow.
 <div
   style="width:100%;
   height:var(--space-extravagant);
-  background-color:var(--color-cancel)"
+  background-color:var(--color-interactive--subtle)"
 ></div>
 
 Use to signify that an interaction will cancel or exit a workflow
