update color docs

--- a/packages/design/src/Colors.mdx
+++ b/packages/design/src/Colors.mdx
@@ -83,6 +83,17 @@ currently tied our interactive color to our brand color._
 
 The default color used for interactive elements.
 
+##### Interactive--Subtle
+
+<div
+  style="width:100%;
+  height:var(--space-extravagant);
+  background-color:var(--color-interactive--subtle)"
+></div>
+
+Use for interactive elements that should be less visually pronounced, such as an
+icon action in main navigation, or buttons to dismiss or cancel a workflow.
+
 #### Destructive
 
 <div
@@ -93,16 +104,6 @@ The default color used for interactive elements.
 
 Use to signify that an interaction will destroy something in the users’ account
 or workflow.
-
-#### Cancel
-
-<div
-  style="width:100%;
-  height:var(--space-extravagant);
-  background-color:var(--color-interactive--subtle)"
-></div>
-
-Use to signify that an interaction will cancel or exit a workflow
 
 #### Disabled
 
