update CSS and docs

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -92,32 +92,31 @@ The usage pattern for Learning Actions should follow the same logic as Work
 Actions for all three levels.
 
 <Playground>
-  <Button
-    label="Learn More"
-    variation="learning"
-    url="//getjobber.com"
-    external={true}
-  />
-</Playground>
+  <Content>
+    <Button
+      label="Learn More"
+      variation="learning"
+      url="//getjobber.com"
+      external={true}
+    />
 
-<Playground>
-  <Button
-    label="Learn More"
-    variation="learning"
-    type="secondary"
-    url="//getjobber.com"
-    external={true}
-  />
-</Playground>
+    <Button
+      label="Learn More"
+      variation="learning"
+      type="secondary"
+      url="//getjobber.com"
+      external={true}
+    />
 
-<Playground>
-  <Button
-    label="Learn More"
-    variation="learning"
-    type="tertiary"
-    url="//getjobber.com"
-    external={true}
-  />
+    <Button
+      label="Learn More"
+      variation="learning"
+      type="tertiary"
+      url="//getjobber.com"
+      external={true}
+    />
+
+  </Content>
 </Playground>
 
 ### Destructive Actions
@@ -180,6 +179,13 @@ Buttons comes in 2 extra sizes.
 <Playground>
   <Button label="Do the thing" size="large" />
 </Playground>
+
+### Subtle Actions
+
+Use for any variation of button when you want the visual appearnce to be more,
+well... subtle.
+
+Think of icon actions in a navigation header, or buttons to dismiss a modal.
 
 ## Icons
 
