--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -93,29 +93,32 @@ Actions for all three levels.
 
 <Playground>
   <Content>
-    <Button
-      label="Learn More"
-      variation="learning"
-      url="//getjobber.com"
-      external={true}
-    />
-
-    <Button
-      label="Learn More"
-      variation="learning"
-      type="secondary"
-      url="//getjobber.com"
-      external={true}
-    />
-
-    <Button
-      label="Learn More"
-      variation="learning"
-      type="tertiary"
-      url="//getjobber.com"
-      external={true}
-    />
-
+    <Content>
+      <Button
+        label="Learn More"
+        variation="learning"
+        url="//getjobber.com"
+        external={true}
+      />
+    </Content>
+    <Content>
+      <Button
+        label="Learn More"
+        variation="learning"
+        type="secondary"
+        url="//getjobber.com"
+        external={true}
+      />
+    </Content>
+    <Content>
+      <Button
+        label="Learn More"
+        variation="learning"
+        type="tertiary"
+        url="//getjobber.com"
+        external={true}
+      />
+    </Content>
   </Content>
 </Playground>
 
@@ -155,10 +158,30 @@ triggered, whether that action is Work, Learning, or Destructive.
   <Button label="Cancel" variation="cancel" />
 </Playground>
 
+### Subtle Actions
+
+Use for any variation of button when you want the visual appearance to be more,
+well... _subtle._ This type of button has no border, a subdued color, and a
+transparent background, allowing it to sit comfortably alongside more prominent
+content.
+
+Think of icon actions in a navigation bar, or buttons to dismiss a modal.
+
+<Playground>
+  <Button type="subtle" icon="search" aria-label="search" />
+  <Button type="subtle" icon="cog" aria-label="settings" />
+  <Button type="subtle" icon="help" aria-label="help" />
+  <Button type="subtle" icon="more" aria-label="more" />
+</Playground>
+
 ## Disabled
 
-Buttons can be disabled for a number of reasons, users may need to do an action
-first or they may not be ready to use that button.
+As a best practice, do not design with disabled button states. This has negative
+impacts on accessibility as well as an increase in complexity for users to
+understand why the interface is disabled and how to resolve it.
+
+With that said, if you _can't_ design a flow without a disabled state, this is
+how you disable a button.
 
 <Playground>
   <Button label="Do the thing" disabled />
@@ -166,26 +189,25 @@ first or they may not be ready to use that button.
 
 ## Sizes
 
-Buttons comes in 2 extra sizes.
+Buttons comes in three sizes. `Base` is the default and should be used for
+almost every use case.
 
-### Small
-
-<Playground>
-  <Button label="Do the thing" size="small" />
-</Playground>
-
-### Large
+Only use `large` for extremely spacious interfaces such as a login form, and
+`small` when the interface has extremely tight size constraints.
 
 <Playground>
-  <Button label="Do the thing" size="large" />
+  <Content>
+    <Content>
+      <Button label="Small" size="small" />
+    </Content>
+    <Content>
+      <Button label="Base" />
+    </Content>
+    <Content>
+      <Button label="Large" size="large" />
+    </Content>
+  </Content>
 </Playground>
-
-### Subtle Actions
-
-Use for any variation of button when you want the visual appearnce to be more,
-well... subtle.
-
-Think of icon actions in a navigation header, or buttons to dismiss a modal.
 
 ## Icons
 
