added ability to dismiss inline label

--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -46,6 +46,18 @@ descriptive label can help the user understand the meaning of an item's status.
 
 ---
 
+## Dismissable
+
+<Playground>
+  <InlineLabel
+    dismissable={true}
+    dismissAriaLabel="Remove Label"
+    onDismiss={() => alert("🗑 item dismissed!")}
+  >
+    Beta
+  </InlineLabel>
+</Playground>
+
 ## Sizes
 
 ### Large
