adjust spacing on icons

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -79,9 +79,9 @@ The textarea will start at a specified minimum and grow to a specified maximum.
 
 <Playground>
   <InputText
-    defaultValue="Rocinante"
-    placeholder="Ship name"
-    prefix={{ label: "🚢", icon: "star" }}
+    defaultValue="1,000,000"
+    placeholder="Invoice Total"
+    prefix={{ label: "$", icon: "invoice" }}
     suffix={{
       label: "Uh Oh!",
       icon: "alert",
