update the mdx to show ariaLabel

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -83,9 +83,10 @@ The textarea will start at a specified minimum and grow to a specified maximum.
     placeholder="Invoice Total"
     prefix={{ label: "$", icon: "invoice" }}
     suffix={{
-      label: "Uh Oh!",
-      icon: "alert",
-      onClick: () => alert("You sunk my battleship!"),
+      label: "💰💰💰",
+      icon: "paidInvoice",
+      ariaLabel: "Tell me i'm rich",
+      onClick: () => alert("You're rich!"),
     }}
   />
 </Playground>
